--- a/registration/index.html
+++ b/registration/index.html
@@ -4,17 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Registration Form</title>
+    <link rel="icon" href="../image.png">
     <link rel="stylesheet" href="styles.css">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="script.js" defer></script>
+    <script src="./script.js" defer></script> <!-- Ensure the correct path -->
 </head>
 <body>
     <header>
         <nav>
-            <ul><li><a href="../index.html">Web_Tech</a></li>
-            </ul>
-            </nav>
-                </header>
+            <ul><li><a href="../index.html">Web_Tech</a></li></ul>
+        </nav>
+    </header>
                 
     <div class="container">
         <h1>Registration Form</h1>
