--- a/registration/index.html
+++ b/registration/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Registration Form</title>
-    <link rel="icon" href="../image.png">
+    <link rel="icon" href="../assets/image.png">
     <link rel="stylesheet" href="styles.css">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="./script.js" defer></script> <!-- Ensure the correct path -->
@@ -12,7 +12,7 @@
 <body>
     <header>
         <nav>
-            <ul><li><a href="../index.html">Web_Tech</a></li></ul>
+            <ul><li><a href="../index.html"><img src="../assets/white-home-svgrepo-com.svg" style="height: 55px;"></a></li></ul>
         </nav>
     </header>
                 
