--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home Page</title>
-    <link rel="icon" href="./image.png">
+    <title>CSB</title>
+    <link rel="icon" href="./assets/image.png">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
