--- a/resume/index.html
+++ b/resume/index.html
@@ -4,14 +4,40 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Website</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="./styles.css">
+    <link rel="icon" href="../assets/image.png">
+    <style>
+
+
+        .button {
+            background-color: white; /* Green background */
+            border: none; /* Remove borders */
+            color: black; /* White text */
+            padding: 10px 32px ; /* Some padding */
+            text-align: center; /* Centered text */
+            text-decoration: none; /* Remove underline */
+            display: inline-block;/* Make the buttons appear side by side */
+            font-size: 16px; /* Increase font size */
+            margin: 4px 2px ; /* Some margin */
+            cursor: pointer; /* Pointer/hand icon */
+            border-radius: 12px; /* Rounded corners */
+        }
+
+        .button:hover {
+            background-color: grey; /* Darker green on hover */
+        }
+    </style>
 </head>
 <body>
     <header>
         <nav>
-            <ul><li><a href="../index.html">Web_Tech</a></li>
-                <li><a href="resume.html">Resume</a></li>
-                <li><a href="biodata.html">Bio-data</a></li>
+            <ul>
+                <a href="../index.html"><img src="../assets/white-home-svgrepo-com.svg" style="height: 45px;"></a></li>
+            </ul>
+                <ul>
+              
+                <li><a href="resume.html"><button class="button">Resume</button></a></li>
+                <li><a href="biodata.html"><button class="button">Bio-Data</button></a></li>
             </ul>
         </nav>
     </header>
