--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@
             <p>Build a Web application with HTML, CSS, JavaScript, jQuery and PHP for online application/registration form. Form should accept the information and print/display on a browser with formatting/styling upon submission (Button click) on success. Host the application on a cloud platform.</p>
             <button onclick="location.href='./registration/index.html'">Go to Assignment 2</button>
         </section>
+        <div class="github-link">
+            <p><span>Code for Refrence </span>:</p>
+            <a href="https://github.com/HarshithAlfred/web_tech.git" target="_blank">GitHub Repository</a>
+        </div>
     </main>
     <footer>
         <p>&copy; 2024-25 Programming Assignments CSB</p>
