--- a/resume/biodata.html
+++ b/resume/biodata.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Biodata</title>
     <link rel="stylesheet" href="biodata.css">
+    <link rel="icon" href="../assets/image.png">
 </head>
 <body>
     <header>
